--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
 
         # Install packages.
         conda create --yes python=${{ matrix.python-version }}
-        conda install --yes blosc bzip2 hdf5 lz4 lzo snappy zstd zlib
+        conda install --yes python=${{ matrix.python-version }} blosc bzip2 hdf5 lz4 lzo snappy zstd zlib
 
         # Install build dependencies.
         conda install --yes --file=requirements.txt --file=requirements-dev.txt
