--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         arch: [x86_64, aarch64]
         # TODO: readd
-        os: [ 'ubuntu-18.04', 'windows-latest', 'macos-10.15']
+        os: [ 'ubuntu-latest', 'windows-latest', 'macos-10.15']
         exclude:
         # excludes node 8 on macOS
         - os: macos-10.15
@@ -37,6 +37,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
+
+      - uses: docker/setup-qemu-action@v1
+        if:  ${{matrix.arch}} == 'aarch64' && contains(matrix.os, 'ubuntu')
+        name: Set up QEMU
 
       - name: Apply caching
         id: cache
