--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -38,9 +38,9 @@ jobs:
         with:
           python-version: '3.9'
 
-      - uses: docker/setup-qemu-action@v1
-        if:  ${{matrix.arch}} == 'aarch64' && contains(matrix.os, 'ubuntu')
-        name: Set up QEMU
+      - name: Set up QEMU
+        if: ${{matrix.arch}} == 'aarch64' && contains(matrix.os, 'ubuntu')
+        uses: docker/setup-qemu-action@v1
 
       - name: Apply caching
         id: cache
