--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - master
       - 'releases/**'
+      - hdf5_from_source
     tags:
       - v*
   release:
@@ -16,6 +17,8 @@ jobs:
   build_wheels:
     name: Build wheels on ${{matrix.arch}} for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    env:
+      HDF5_VERSION: 1.12.1
     strategy:
       matrix:
         # os: [ubuntu-latest, windows-latest, macos-latest]
@@ -44,10 +47,12 @@ jobs:
         env:
           CIBW_ARCHS_LINUX: ${{matrix.arch}}
           CIBW_BUILD: "cp36-* cp37-* cp38-* cp39-* cp310-*"
-          CIBW_BEFORE_ALL_LINUX: "yum -y update && yum install -y epel-release && yum install -y hdf5-devel zlib-devel bzip2-devel lzo-devel blosc-devel"
+          CIBW_BEFORE_ALL_LINUX: "yum -y update && yum install -y epel-release && yum install -y zlib-devel bzip2-devel lzo-devel && ./ci/github/get_hdf5_if_needed.sh"
           CIBW_BEFORE_BUILD: "pip install numpy numexpr cython>=0.29.21"
-          CIBW_ENVIRONMENT: "DISABLE_AVX2='TRUE'"
+          CIBW_ENVIRONMENT: "DISABLE_AVX2='TRUE' HDF5_DIR=/tmp/hdf5 HDF5_VERSION=${{ env.HDF5_VERSION }} LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/tmp/hdf5/lib/"
           CIBW_SKIP: '*-musllinux_*'
+          CIBW_TEST_COMMAND: >
+            python -m tables.tests.test_all
 
       - uses: actions/upload-artifact@v2
         with:
