--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,7 @@
-image: Visual Studio 2015
+image:
+  # - Visual Studio 2015
+  - Visual Studio 2019
+
 environment:
   PACKAGE_NAME: tables
   BUILD_DEPENDS: "numpy>=1.8.0 numexpr>=2.5.2 cython bzip2 hdf5"
@@ -14,17 +17,17 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci\\appveyor\\windows_sdk.cmd"
 
   matrix:
-    - PYTHON: "C:\\Miniconda36-x64"
-      PYTHON_VERSION: "3.6"
-      PYTHON_ARCH: "64"
+    # - PYTHON: "C:\\Miniconda36-x64"
+    #   PYTHON_VERSION: "3.6"
+    #   PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\Miniconda37-x64"
-      PYTHON_VERSION: "3.7"
-      PYTHON_ARCH: "64"
+    # - PYTHON: "C:\\Miniconda37-x64"
+    #   PYTHON_VERSION: "3.7"
+    #   PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\Miniconda37-x64"
-      PYTHON_VERSION: "3.8"
-      PYTHON_ARCH: "64"
+    # - PYTHON: "C:\\Miniconda37-x64"
+    #   PYTHON_VERSION: "3.8"
+    #   PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Miniconda37-x64"
       PYTHON_VERSION: "3.9"
