--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -56,7 +56,7 @@ jobs:
           CIBW_ENVIRONMENT: "DISABLE_AVX2='TRUE' HDF5_DIR=/tmp/hdf5 HDF5_VERSION=${{ env.HDF5_VERSION }} LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/tmp/hdf5/lib/"
           CIBW_SKIP: '*-musllinux_*'
           CIBW_TEST_COMMAND: >
-            python -m tables.tests.test_all
+            "${{ matrix.arch == 'aarch64' && '' || 'python -m tables.tests.test_all' }}"
 
       - name: Build wheels macOS
         if: startsWith(matrix.os, 'mac')
