--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,11 +43,8 @@ install:
 build_script:
   - conda config --add channels conda-forge
   - conda create --yes -n build_env python=%PYTHON_VERSION% %BUILD_DEPENDS%
-  - dir C:\Miniconda37-x64\envs\build_env\Library\lib
-  - cp C:\Miniconda37-x64\envs\build_env\Library\bin\hdf5.dll .
-  - cp C:\Miniconda37-x64\envs\build_env\Library\lib\hdf5.lib .
   - activate build_env
-
+  - python ci/appveyor/fix_paths.py C:\Miniconda37-x64\envs\build_env\lib\site-packages
   # Build wheel
   - "%CMD_IN_ENV% python setup.py bdist_wheel"
 
