--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,17 +16,17 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci\\appveyor\\windows_sdk.cmd"
 
   matrix:
-    # - PYTHON: "C:\\Miniconda36-x64"
-    #   PYTHON_VERSION: "3.6"
-    #   PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Miniconda36-x64"
+      PYTHON_VERSION: "3.6"
+      PYTHON_ARCH: "64"
 
-    # - PYTHON: "C:\\Miniconda37-x64"
-    #   PYTHON_VERSION: "3.7"
-    #   PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Miniconda37-x64"
+      PYTHON_VERSION: "3.7"
+      PYTHON_ARCH: "64"
 
-    # - PYTHON: "C:\\Miniconda37-x64"
-    #   PYTHON_VERSION: "3.8"
-    #   PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Miniconda37-x64"
+      PYTHON_VERSION: "3.8"
+      PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Miniconda37-x64"
       PYTHON_VERSION: "3.9"
