--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -197,6 +197,24 @@ jobs:
         with:
           path: ./wheelhouse/*.whl
 
+  test_wheels:
+    depends-on: build_wheels
+    name: Test wheels on ${{matrix.arch}} for ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        # os: [ 'ubuntu-latest', 'windows-latest', 'macos-10.15']
+        os: [ 'windows-latest']
+
+
+      - uses: actions/download-artifact@v2
+        with:
+          path: ./wheelhouse/
+
+
+      - name: Display structure of downloaded files
+        run: ls -R ./wheelhouse/
+
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
