--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -206,7 +206,7 @@ jobs:
         # os: [ 'ubuntu-latest', 'windows-latest', 'macos-10.15']
         os: [ 'windows-latest']
 
-
+    steps:
       - uses: actions/download-artifact@v2
         with:
           path: ./wheelhouse/
