--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,7 +23,6 @@ jobs:
         arch: [x86_64, aarch64]
         # os: [ 'ubuntu-latest', 'windows-latest', 'macos-10.15']
         os: [ 'windows-latest']
-        python: ['3.7', '3.8', '3.9','3.10']
         exclude:
         # excludes aarch64 on macOS
         - os: macos-10.15
@@ -200,12 +199,13 @@ jobs:
 
   test_wheels:
     needs: build_wheels
-    name: Test wheels on ${{matrix.arch}} for ${{ matrix.os }}
+    name: Test ${{ matrix.python }} wheels for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         # os: [ 'ubuntu-latest', 'windows-latest', 'macos-10.15']
         os: [ 'windows-latest']
+        python: ['3.7', '3.8', '3.9','3.10']
 
     steps:
       - uses: actions/download-artifact@v2
