--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -205,7 +205,7 @@ jobs:
       matrix:
         # os: [ 'ubuntu-latest', 'windows-latest', 'macos-10.15']
         os: [ 'windows-latest']
-        python: ['3.7', '3.8', '3.9','3.10']
+        python-version: ['3.7', '3.8', '3.9','3.10']
 
     steps:
       - uses: actions/download-artifact@v2
@@ -215,7 +215,7 @@ jobs:
       - name: Install Python ${{ matrix.python }}
         uses: actions/setup-python@v2
         with:
-          python-version: matrix.python     
+          python-version: ${{ matrix.python-version }}   
 
       - name: Install tables
         run: |
