Don't download from pypi when installing

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -219,7 +219,8 @@ jobs:
 
       - name: Install tables
         run: |
-          pip install --find-links wheelhouse/artifact/ tables
+          pip install -r requirements.txt
+          pip install --no-index --find-links wheelhouse/artifact/ tables
         
       - name: Run tests
         run: |
@@ -258,25 +259,25 @@ jobs:
         with:
           path: dist/*
 
-  upload_pypi:
-    needs: [build_wheels, build_sdist]
-    runs-on: ubuntu-latest
-    # upload to PyPI on every tag starting with 'v'
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
-    # alternatively, to publish when a GitHub Release is created, use the following rule:
-    # if: github.event_name == 'release' && github.event.action == 'published'
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: artifact
-          path: dist
+  # upload_pypi:
+  #   needs: [build_wheels, build_sdist]
+  #   runs-on: ubuntu-latest
+  #   # upload to PyPI on every tag starting with 'v'
+  #   if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+  #   # alternatively, to publish when a GitHub Release is created, use the following rule:
+  #   # if: github.event_name == 'release' && github.event.action == 'published'
+  #   steps:
+  #     - uses: actions/download-artifact@v2
+  #       with:
+  #         name: artifact
+  #         path: dist
 
-      - uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          verbose: true
-          skip_existing: true
+  #     - uses: pypa/gh-action-pypi-publish@master
+  #       with:
+  #         user: __token__
+  #         password: ${{ secrets.PYPI_API_TOKEN }}
+  #         verbose: true
+  #         skip_existing: true
 
-          # Use for testing.
-          #repository_url: https://test.pypi.org/legacy/
+  #         # Use for testing.
+  #         #repository_url: https://test.pypi.org/legacy/
