--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -62,7 +62,8 @@ jobs:
           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_ARCHS_MACOS: ${{ matrix.arch == 'aarch64' && 'arm64' || 'x86_64'}}
           CIBW_BUILD: "cp36-* cp37-* cp38-* cp39-* cp310-*"
-          CIBW_BEFORE_ALL_LINUX: "yum -y update && yum install -y zlib-devel bzip2-devel lzo-devel  && ./ci/github/get_hdf5_if_needed.sh"
+          # CIBW_BEFORE_ALL_LINUX: "yum -y update && yum install -y zlib-devel bzip2-devel lzo-devel  && ./ci/github/get_hdf5_if_needed.sh"
+          CIBW_BEFORE_ALL_LINUX: "yum -y update && yum install -y epel-release && yum install -y zlib-devel bzip2-devel lzo-devel ${{ matrix.arch == 'aarch64' && 'hdf5-devel' || ''}} && ./ci/github/get_hdf5_if_needed.sh"
           # CIBW_BEFORE_ALL_LINUX: "yum -y update && yum install -y epel-release && yum install -y zlib-devel bzip2-devel lzo-devel ${{ matrix.arch == 'aarch64' && 'blosc-devel' || ''}} && ./ci/github/get_hdf5_if_needed.sh"
           CIBW_BEFORE_ALL_MACOS: "./ci/github/get_hdf5_if_needed.sh"
           CIBW_BEFORE_BUILD: "pip install -r requirements.txt cython>=0.29.21"
